html | 修改查询详情页面

--- a/html/detail.html
+++ b/html/detail.html
@@ -45,7 +45,6 @@
 				border-color: #666666;
 				background-color: #ffffff;
 			}
-
 			button{
 				border: none;
 				/* background: #c0392b; */
@@ -120,59 +119,59 @@
 								<table class="gridtable">
 									<tr>
 										<th>决定书编号</th>
-										<td>3503221405506126</td>
+										<td id="id">3503221405506126</td>
 									</tr>
 									<tr>
 										<th>案件名称	</th>
-										<td>戴玉辉机动车驾驶人违反道路通行规定案</td>
+										<td id="case_name">戴玉辉机动车驾驶人违反道路通行规定案</td>
 									</tr>
 									<tr>
 										<th>驾驶人</th>
-										<td>戴玉辉</td>
+										<td id="people_name">戴玉辉</td>
 									</tr>
 									<tr>
 										<th>号牌种类	</th>
-										<td>大型汽车</td>
+										<td id="type">大型汽车</td>
 									</tr>
 									<tr>
 										<th>号牌号码	</th>
-										<td>闽BY5676</td>
+										<td id="car_number">闽BY5676</td>
 									</tr>
 									<tr>
 										<th>处罚事实	</th>
-										<td>戴玉辉于2016年02月28日15时12分，在福昆线实施驾驶中型以上载客汽车在高速公路、城市快速路以外的道路上行驶超过规定时速20%以上未达到50%的违法行为。</td>
+										<td id="detail">戴玉辉于2016年02月28日15时12分，在福昆线实施驾驶中型以上载客汽车在高速公路、城市快速路以外的道路上行驶超过规定时速20%以上未达到50%的违法行为。</td>
 									</tr>
 									<tr>
 										<th>处罚类别	</th>
-										<td>罚款</td>
+										<td id="punish_type">罚款</td>
 									</tr>
 									<tr>
 										<th>处罚结果	</th>
-										<td>罚款100元</td>
+										<td id="punish_result">罚款100元</td>
 									</tr>
 									<tr>
 										<th>记分	</th>
-										<td>记6分</td>
+										<td id="point">记6分</td>
 									</tr>
 									<tr>
 										<th>处罚依据	</th>
-										<td>《福建省实施〈中华人民共和国道路交通安全法〉办法》第67条第14项</td>
+										<td id="law">《福建省实施〈中华人民共和国道路交通安全法〉办法》第67条第14项</td>
 									</tr>
 									<tr>
 										<th>处罚部门	</th>
-										<td>仙游县公安局交通警察大队</td>
+										<td id="punish_division">仙游县公安局交通警察大队</td>
 									</tr>
 									<tr>
 										<th>处罚行政区划	</th>
-										<td>福建省莆田市仙游县</td>
+										<td id="punish_area">福建省莆田市仙游县</td>
 									</tr>
 									<tr>
 										<th>处罚日期	</th>
-										<td>2016年06月24日</td>
+										<td id="punish_date">2016年06月24日</td>
 									</tr>
 									<tr>
 										<th>处理	</th>
-										<td><button>申诉</button><button></button></td>
+										<td id="deal"><button>申诉</button><button>接受处罚</button></td>
 									</tr>
 								</table>
 									</div>
@@ -189,7 +188,6 @@
 				<div class="container">
 					<div class="row">
 						<div class="8u 12u(mobile)">
-
 							<section>
 								<h2>相关链接</h2>
 								<div>
@@ -231,11 +229,9 @@
 					</div>
 					<div class="row">
 						<div class="12u">
-
 							<div id="copyright">
 								&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
 							</div>
-
 						</div>
 					</div>
 				</div>
