html | result.html | 循环输出表格 | 跳转详情页 | 结果为空的提示信息

--- a/html/index.html
+++ b/html/index.html
@@ -340,10 +340,6 @@
         })
     }
 
-
-
-
-
     // 测试
     function test() {
         $.ajax({
@@ -360,10 +356,12 @@
     }
 
 
+    // todo 点击查询时删除localstorage 中的查询结果
+
     $(function () {
         user_online();
         form_check();
-        test()
+//        test()
     })
 </script>
 <script src="assets/js/skel.min.js"></script>
