html | 读取对应违章详情

--- a/html/detail.html
+++ b/html/detail.html
@@ -125,7 +125,7 @@
                 <div class="12u">
 
                     <section>
-                        <h2>案件详情</h2>
+                        <h2>车辆违章详情</h2>
 
                         <div class="table-container">
                             <table class="gridtable">
@@ -133,14 +133,14 @@
                                     <th>决定书编号</th>
                                     <td id="id">3503221405506126</td>
                                 </tr>
-                                <tr>
-                                    <th>案件名称</th>
-                                    <td id="case_name">戴玉辉机动车驾驶人违反道路通行规定案</td>
-                                </tr>
-                                <tr>
-                                    <th>驾驶人</th>
-                                    <td id="people_name">戴玉辉</td>
-                                </tr>
+                                <!--<tr>-->
+                                <!--<th>案件名称</th>-->
+                                <!--<td id="case_name">戴玉辉机动车驾驶人违反道路通行规定案</td>-->
+                                <!--</tr>-->
+                                <!--<tr>-->
+                                <!--<th>驾驶人</th>-->
+                                <!--<td id="people_name">戴玉辉</td>-->
+                                <!--</tr>-->
                                 <tr>
                                     <th>号牌种类</th>
                                     <td id="type">大型汽车</td>
@@ -156,6 +156,12 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <th>地点</th>
+                                    <td id="place">
+                                        戴玉辉于2016年02月28日15时12分，在福昆线实施驾驶中型以上载客汽车在高速公路、城市快速路以外的道路上行驶超过规定时速20%以上未达到50%的违法行为。
+                                    </td>
+                                </tr>
+                                <tr>
                                     <th>处罚类别</th>
                                     <td id="punish_type">罚款</td>
                                 </tr>
@@ -163,10 +169,10 @@
                                     <th>处罚结果</th>
                                     <td id="punish_result">罚款100元</td>
                                 </tr>
-                                <tr>
-                                    <th>记分</th>
-                                    <td id="point">记6分</td>
-                                </tr>
+                                <!--<tr>-->
+                                <!--<th>记分</th>-->
+                                <!--<td id="point">记6分</td>-->
+                                <!--</tr>-->
                                 <tr>
                                     <th>处罚依据</th>
                                     <td id="law">《福建省实施〈中华人民共和国道路交通安全法〉办法》第67条第14项</td>
@@ -176,7 +182,15 @@
                                     <td id="punish_division">仙游县公安局交通警察大队</td>
                                 </tr>
                                 <tr>
-                                    <th>处罚行政区划</th>
+                                    <th>处罚者</th>
+                                    <td id="punish_police">仙游县公安局交通警察大队</td>
+                                </tr>
+                                <tr>
+                                    <th>处罚者身份</th>
+                                    <td id="police_job">仙游县公安局交通警察大队</td>
+                                </tr>
+                                <tr>
+                                    <th>处罚行政区</th>
                                     <td id="punish_area">福建省莆田市仙游县</td>
                                 </tr>
                                 <tr>
@@ -184,7 +198,7 @@
                                     <td id="punish_date">2016年06月24日</td>
                                 </tr>
                                 <tr>
-                                    <th>处理</th>
+                                    <th>违章处理</th>
                                     <td id="deal">
                                         <button>申诉</button>
                                         <button>接受处罚</button>
@@ -192,9 +206,6 @@
                                 </tr>
                             </table>
                         </div>
-                        <!--<p>This is the second generic interior page. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ante ante, viverra a ornare sed, convallis sed est. Proin felis sapien, adipiscing quis eleifend vel, sodales vitae sapien. Donec vel lacus leo, eu convallis metus. Cras egestas feugiat tortor, vitae interdum augue aliquam a. Sed nec augue id orci egestas commodo in eget magna. Nunc eleifend diam non odio laoreet placerat gravida nulla bibendum. Phasellus tempus imperdiet suscipit.</p>-->
-                        <!--<p>Mauris risus nulla, pulvinar vitae sagittis a, pharetra nec tellus. Suspendisse varius enim ac felis mattis aliquam. Aenean et justo quis ipsum gravida lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia bibendum cursus. Nullam nec pellentesque lacus. In porta erat in tortor rhoncus quis accumsan magna pretium. Nulla posuere magna eget mauris lacinia in mollis sem fermentum. Donec mollis adipiscing mauris, ut posuere enim rhoncus ut. Nunc commodo vestibulum orci vel placerat. Cras sed risus libero. Donec ac lacus vitae lectus mattis commodo id vitae libero. Etiam lorem odio, volutpat nec pulvinar sit amet, tincidunt ut lacus. Pellentesque consequat arcu vel nisi lobortis in pellentesque orci sollicitudin. Cras gravida lacus turpis, consectetur porttitor lectus. Cras malesuada tortor id neque porta ut semper quam iaculis.</p>-->
-                        <!--<p>Nulla ut tortor quam, a luctus nunc. Nulla condimentum diam porttitor arcu placerat tincidunt. Nunc non augue ipsum. Nulla facilisi. Phasellus feugiat augue in ipsum egestas semper. Suspendisse blandit, nisl ullamcorper blandit sollicitudin, sem leo auctor lectus, et volutpat mauris elit et odio. Ut elementum risus in metus mollis tristique vulputate nulla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae orci dui, ut facilisis dui.</p>-->
                     </section>
 
                 </div>
@@ -216,7 +227,6 @@
                                         <li><a href="http://www.mps.gov.cn/n16/n85753/">公安部交通管理局</a></li>
                                         <li><a href="http://www.tmri.cn/">公安部交通管理科学研究所</a></li>
                                         <li><a href="http://www.122.cn/">交通安全宣传网</a></li>
-                                        <!--<li><a href="#">Eget et amet consequat</a></li>-->
                                     </ul>
                                 </div>
                                 <div class="6u 12u(mobile)">
@@ -266,30 +276,43 @@
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.js"></script>
 <script>
-    $(function () {
-//				id
-//					case_name
-//				people_name
-//				type
-//						car_number
-//						detail
-//						punish_result
-//						point
-//						law
-//				punish_division
-//				punish_area
-//					punish_date
-//					deal
 
-        // todo 读取数据
+    // todo 识别无效操作 处理
+
+    // 读取数据
+    function read_data() {
+        // 读取数据
         var data = JSON.parse(localStorage.data);
         var case_id = JSON.parse(localStorage.case_id);
         console.log(data);
+
+
+        // 根据 case_id 寻找对应数据
+        for (var i in data.result) {
+            if (data.result[i]['id'] == case_id) {
+                var result = data.result[i];
+                // todo 删除 localstorage.case_id 避免无效操作
+                break;
+            }
+        }
+        console.log(result);
+
+        // todo 数据可能需要细微调整
         $("#id").text(case_id);
+        $("#type").text(data.car.type);
+        $("#car_number").text(data.car.id);
+        $("#detail").text(result.content);
+        $("#punish_type").text(result.punishment);
+        $("#punish_result").text('罚款' + result.cost + '元');
+        $("#punish_date").text(result.happentime);
+        $("#punish_area").text(result.area);
+        $("#law").text(result.law_content);
+        $("#punish_police").text(result.police_name);
+        $("#police_job").text(result.police_job);
+    }
 
-
-
-
+    $(function () {
+        read_data()
     })
 </script>
 
