html | 循环输出车辆违章信息

--- a/html/index.html
+++ b/html/index.html
@@ -361,7 +361,7 @@
     $(function () {
         user_online();
         form_check();
-//        test()
+        test()
     })
 </script>
 <script src="assets/js/skel.min.js"></script>
