--- a/html/result.html
+++ b/html/result.html
@@ -300,7 +300,7 @@
                     <td>' + data.result[i].state + '</td>\
                     <td>' + data.car.type + '</td>\
                     <td>' + data.result[i]['car_id'] + '</td>\
-                    <td>罚款150元'+data.result[i]['cost']+'</td>\
+                    <td>罚款'+data.result[i]['cost']+'元</td>\
                     <td>' + data.result[i]['happentime'] + '</td>\
                     <td>\
                         <button data-case_id="'+ data.result[i]['id'] +'"  onclick="case_detail(event)">查看详情</button>\
@@ -311,7 +311,6 @@
         }
     }
 
-
     // todo 跳转详情页
     // todo 案件id 存入 local
     function case_detail(event){
@@ -319,9 +318,6 @@
         localStorage.case_id = $(event.target).attr('data-case_id');
         location.href = './detail.html';
     }
-
-
-
 
     // 判断结果为空
     function result_empty(){
