--- a/html/result.html
+++ b/html/result.html
@@ -311,8 +311,8 @@
         }
     }
 
-    // todo 跳转详情页
-    // todo 案件id 存入 local
+    // 跳转详情页
+    // 案件id 存入 local
     function case_detail(event){
         var data = JSON.parse(localStorage.data);
         localStorage.case_id = $(event.target).attr('data-case_id');
@@ -333,7 +333,7 @@
         }
     }
 
-    // todo 判断无效操作
+    // todo 判断无效操作？
     // todo 读取完毕后删除数据
 
     $(function () {
