--- a/html/index.html
+++ b/html/index.html
@@ -26,19 +26,17 @@
         <div class="container">
             <div class="row">
                 <div class="12u">
-
                     <header id="header">
                         <h1><a href="#" id="logo">交通安全综合服务管理平台</a></h1>
                         <nav id="nav">
                             <!-- <a href="index.html" class="current-page-item">主页</a> -->
                             <!-- <a href="twocolumn1.html">新闻</a> -->
-                            <a href="onecolumn.html">查询历史</a>
-                            <a href="threecolumn.html">关于</a>
-                            <a href="#" id="user_operation" onclick="user_operate(event)">登录</a>
+                            <a href="#" id="search_history">查询历史</a>
+                            <!--<a href="threecolumn.html">关于</a>-->
+                            <a href="./login/login.html"  id="user_operation" onclick="user_operate(event)">登录</a>
                             <a href="#" id="user_info"></a>
                         </nav>
                     </header>
-
                 </div>
             </div>
         </div>
@@ -214,64 +212,8 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.validate.js"></script>
 <script src="assets/js/messages_zh.js"></script>
+<script src="assets/js/log.js"></script>
 <script>
-
-
-    function setCookie(cname, cvalue, exdays) {
-        var d = new Date();
-        d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
-        var expires = "expires=" + d.toUTCString();
-        document.cookie = cname + "=" + cvalue + "; " + expires + ";path=/"; // cookie 的跨域解决方案
-    }
-
-    function getCookie(name) {
-        var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
-        if (arr = document.cookie.match(reg))
-            return unescape(arr[2]);
-        else
-            return null;
-    }
-
-    function delCookie(name) {
-        setCookie(name, "", -1);
-    }
-
-
-    // 判断用户是否已登录
-    function user_online() {
-        if (getCookie('userOnline')) { // 获取 cookie.userOnline
-            cookie = getCookie('userOnline');
-            console.log(cookie);
-            $('#user_operation').text('注销'); // 切换 登录和注销
-            show_user(cookie);
-
-        } else {
-            $('#user_operation').text('登录');
-            hide_user();
-        }
-    }
-
-    // 用户登录/注销
-    function user_operate(evt) {
-        if ($(evt.target).text() == '登录') { // 点击登录 跳转至登录页
-            location.href = "./login/login.html";
-        } else if ($(evt.target).text() == '注销') { // 点击注销
-            // 删除 userOnline
-            delCookie('userOnline');
-            // 刷新页面
-            location.href += "";
-        }
-    }
-
-    // 首页显示用户信息
-    function show_user(info) {
-        $("#user_info").text(info).show();
-    }
-
-    // 隐藏用户信息
-    function hide_user() {
-        $("#user_info").text("").hide();
-    }
 
     // 提交车辆违法表单
     function form_submit() {
@@ -363,8 +305,9 @@
     $(function () {
         user_online();
         form_check();
-        test()
+        test();
     })
+
 </script>
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/skel-viewport.min.js"></script>
