--- a/html/result.html
+++ b/html/result.html
@@ -143,19 +143,17 @@
         <div class="container">
             <div class="row">
                 <div class="12u">
-
                     <header id="header">
                         <h1><a href="#" id="logo">交通安全综合服务管理平台</a></h1>
                         <nav id="nav">
                             <!-- <a href="index.html" class="current-page-item">主页</a> -->
                             <!-- <a href="twocolumn1.html">新闻</a> -->
-                            <a href="onecolumn.html">查询历史</a>
-                            <a href="threecolumn.html">关于</a>
-                            <a href="#" id="user_operation" onclick="user_operate(event)">登录</a>
+                            <a href="#" id="search_history">查询历史</a>
+                            <!--<a href="threecolumn.html">关于</a>-->
+                            <a href="./login/login.html" id="user_operation" onclick="user_operate(event)">登录</a>
                             <a href="#" id="user_info"></a>
                         </nav>
                     </header>
-
                 </div>
             </div>
         </div>
@@ -283,6 +281,7 @@
 <!--[if lte IE 8]>
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.js"></script>
+<script src="assets/js/log.js"></script>
 <script>
 
     // todo 从 localstorage 读取数据
@@ -305,11 +304,11 @@
                     <td>' + data.result[i].state + '</td>\
                     <td>' + data.car.type + '</td>\
                     <td>' + data.result[i]['car_id'] + '</td>\
-                    <td>'+data.result[i]['punishment']+'</td>\
-                    <td>'+(data.result[i]['cost']?data.result[i]['cost']:0)+'元</td>\
+                    <td>' + data.result[i]['punishment'] + '</td>\
+                    <td>' + (data.result[i]['cost'] ? data.result[i]['cost'] : 0) + '元</td>\
                     <td>' + data.result[i]['happentime'] + '</td>\
                     <td>\
-                        <button data-case_id="'+ data.result[i]['id'] +'"  onclick="case_detail(event)">查看详情</button>\
+                        <button data-case_id="' + data.result[i]['id'] + '"  onclick="case_detail(event)">查看详情</button>\
                     </td>\
                 </tr>\
             ');
@@ -319,20 +318,20 @@
 
     // 跳转详情页
     // 案件id 存入 local
-    function case_detail(event){
+    function case_detail(event) {
         var data = JSON.parse(localStorage.data);
         localStorage.case_id = $(event.target).attr('data-case_id');
         location.href = './detail.html';
     }
 
     // 判断结果为空
-    function result_empty(){
+    function result_empty() {
 
         var data = JSON.parse(localStorage.data);
         var $result_form = $("#result_form");
 
         console.log(data.result.length);
-        if(data.result.length < 1 || !data){
+        if (data.result.length < 1 || !data) {
             $result_form.children().remove();
             $result_form.append('<h1>未查找到违章记录 <a href="./index.html"> 返回主页</a></h1>');
             // 提示无数据 返回查询链接
@@ -343,6 +342,8 @@
     // todo 读取完毕后删除数据
 
     $(function () {
+        user_online();
+
         read_local();
         result_empty();
     });
