--- a/html/detail.html
+++ b/html/detail.html
@@ -307,7 +307,7 @@
         }
         console.log(result);
 
-        // todo 数据可能需要细微调整
+        // 数据可能需要细微调整
         $("#id").text(case_id);
         $("#type").text(data.car.type);
         $("#car_number").text(data.car.id);
@@ -332,8 +332,10 @@
     }
 
 
-    // todo-1 跳转到缴交罚款链接
+    // todo-2 跳转到缴交罚款链接
     // todo-2 查询历史
+
+    // todo-1 显示证据
 
     // 根据处理状态调整申诉按钮
     function complaint_button(){
