--- a/html/result.html
+++ b/html/result.html
@@ -295,7 +295,6 @@
         $result_form.children().children("tr:gt(0)").remove(); // 移除初始数据
 
 //         循环输出表格
-//      todo 数据调整
         for (var i in data.result) {
             var $row = $('\
                 <tr>\
@@ -339,7 +338,7 @@
     }
 
     // todo 判断无效操作？
-    // todo 读取完毕后删除数据
+    // todo 读取完毕后删除数据？
 
     $(function () {
         user_online();
